Chapter 7/fruits-api-vs-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: fruits-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-fruits-api-gateway
        protocol: HTTP
      hosts:
        - fruits.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fruits-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - fruits.istio-succinctly.io
  gateways:
    - fruits-api-gateway
  http:
    - route:
        - destination:
            host: fruits-api-service
            port:
              number: 80
