Chapter 7/juice-shop-api-tls-vs-gw.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: juice-shop-api-gateway
  namespace: micro-shake-factory
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-juice-shop-api-gateway
        protocol: HTTP
      hosts:
        - juice-shop.istio-succinctly.io
    - port:
        number: 443
        name: https-juice-shop-api-gateway
        protocol: HTTPS
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - juice-shop.istio-succinctly.io
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: juice-shop-api-vservice
  namespace: micro-shake-factory
spec:
  hosts:
    - juice-shop.istio-succinctly.io
  gateways:
    - juice-shop-api-gateway
  http:
    - route:
        - destination:
            host: juice-shop-api-service
            port:
              number: 80
